feat: pequenas correções e atualização do arquivo README
